口渴效果由blur恢复为blob2 提供fdlib的mixin解决方案